# NMPCM

./: LICENSE  README.md
acadogenquad/src/: acadogenquad.cpp
nmpccasadiquad/: CMakeLists.txt  package.xml
nmpccasadiquad/launch/: model.launch.py
nmpccasadiquad/src/: nmpccasadiquad.cpp
nmpccasadiquad/urdf/: uav_drone.urdf.xacro
nmpcpidquad/: CMakeLists.txt  package.xml
nmpcpidquad/include/: acado_common.h  acado_solver.c
nmpcpidquad/launch/: model.launch.py
nmpcpidquad/src/: cascadedpid.cpp  nmpcpidquad.cpp  uavplugin.cc
nmpcpidquad/urdf/: uav_drone.urdf.xacro
